<resources>
    <string name="text_delivered_msg">Delivered</string>
    <string name="attach_video">Video</string>
    <string name="attach_file">File</string>
    <string name="attach_voice_call">Voice call</string>
    <string name="attach_video_call">Video call</string>
    <string name="delete_conversation_messages">Delete conversation and messages</string>
    <string name="delete_conversation">Delete conversation</string>
    <string name="button_uploadlog">Upload the log</string>
    <string name="em_user_remove">This user has been removed</string>
    <string name="set">Settings</string>
    <string name="notify">New message notification</string>
    <string name="newnotify">Receiving a new message</string>
    <string name="shake">Shake</string>
    <string name="chatset">Chat settings</string>
    <string name="yangshengqi">Use speaker</string>
    <string name="book_black">Black list</string>
    <string name="session">Conversation</string>
    <string name="address_book">Address book</string>
    <string name="setting">Settings</string>
    <string name="now_refresh_list">Refreshing contact list</string>
    <string name="Application_and_notify">Invitation and notification</string>
    <string name="save_new_nickname">Save new nickname</string>
    <string name="group_chat">Group chat</string>
    <string name="add_friend">Add friends</string>
    <string name="search">Search</string>
    <string name="black_item">Black list</string>
    <string name="diagnose">Diagnose</string>
    <string name="push_nick">IOS offline push nick</string>
    <string name="Current_version">Current version</string>
    <string name="Not_Set">Not set</string>
    <string name="Upload_the_log">Uploading the log</string>
    <string name="The_new_group_chat">Create new group</string>
    <string name="group_name">Group name</string>
    <string name="Group_chat_profile">Group profile</string>
    <string name="Whether_the_public">Is public</string>
    <string name="Open_group_members_invited">Allow members to invite</string>
    <string name="Open_group_chat">Public group</string>
    <string name="blacklist">Black list</string>
    <string name="Empty_the_chat_record">Clear conversation</string>
    <string name="Shielding_of_the_message">Block message</string>
    <string name="Select_the_contact">Select the contact</string>
    <string name="Group_chat_information">The group description</string>
    <string name="Group_of_Lord">The group owner</string>
    <string name="Introduction">Brief</string>
    <string name="To_join_the_chat">Join the group</string>
    <string name="login">Login</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="confirmpassword">Confirm password</string>
    <string name="downwaiting">Downloading the file, please try again later</string>
    <string name="mute">Mute</string>
    <string name="Hands_free">Hands free</string>
    <string name="hang_up">挂断</string>
    <string name="answer">同意</string>
    <string name="unable_to_connect">Unable to connect to the server</string>
    <string name="newchat">Create new group</string>
    <string name="agree">拒绝</string>
    <string name="Group_chat">Group chat</string>
    <string name="chat_room">Chat room</string>
    <string name="not_download">Did not download:</string>
    <string name="is_down_please_wait">Downloading video, please try again later</string>
    <string name="Exit_the_group_chat">Exit the group</string>
    <string name="Please_enter_a_username">Please enter a username</string>
    <string name="not_add_myself">"Can't add myself"</string>
    <string name="This_user_is_already_your_friend">This user is already your friend</string>
    <string name="Add_a_friend">Let me to be your friend!</string>
    <string name="send_successful">Request was sent, waiting for the peer to accept</string>
    <string name="Request_add_buddy_failure">Request add buddy failure:</string>
    <string name="Network_error">Network error</string>
    <string name="Making_sure_your_location">Making sure your location..</string>
    <string name="please_check">key validation error!Please on AndroidManifest.xml file check the key set</string>
    <string name="expression">[expression]</string>
    <string name="Removed_from_the_failure">Removed fail</string>
    <string name="be_removing">Be removing</string>
    <string name="call_duration">call duration</string>
    <string name="Refused">Refused</string>
    <string name="The_other_party_has_refused_to">Call was refused</string>
    <string name="The_other_is_not_online">The peer is not online</string>
    <string name="The_other_is_on_the_phone">The peer is on the phone</string>
    <string name="The_other_party_did_not_answer">The peer did not answer</string>
    <string name="did_not_answer">did not answer</string>
    <string name="Has_been_cancelled">Cancelled</string>
    <string name="unable_to_get_loaction">Unable to get to your location information!</string>
    <string name="not_connect_to_server">Not connect to server, please try again later</string>
    <string name="sd_card_does_not_exist">"SD card does not exist, can't take pictures"</string>
    <string name="cant_find_pictures">"Can't find pictures"</string>
    <string name="File_does_not_exist">File does not exist</string>
    <string name="The_file_is_not_greater_than_10_m">The file is not greater than 10 m</string>
    <string name="Whether_to_empty_all_chats">Clear all messages?</string>
    <string name="Send_voice_need_sdcard_support">Send voice need sdcard support</string>
    <string name="Recording_without_permission">Recording without permission</string>
    <string name="The_recording_time_is_too_short">The recording time is too short</string>
    <string name="send_failure_please">Send failure, please test whether the server connection</string>
    <string name="Move_into_blacklist_success">Move into blacklist success</string>
    <string name="Move_into_blacklist_failure">Move into blacklist failure</string>
    <string name="you_are_group">You have been kicked off from the group</string>
    <string name="the_current_group">The current group has been dismissed</string>
    <string name="Cant_chat_with_yourself">cannot chat with yourself</string>
    <string name="deleting">Deleting..</string>
    <string name="Delete_failed">Failed to delete</string>
    <string name="Is_moved_into_blacklist">Moving to blacklist..</string>
    <string name="Log_uploaded_successfully">Log was uploaded successfully</string>
    <string name="Log_Upload_failed">Failed to upload the log</string>
    <string name="get_failed_please_check">Failed to retrieve, please check the network or try again later</string>
    <string name="people">people</string>
    <string name="being_added">added</string>
    <string name="is_quit_the_group_chat">Exiting group</string>
    <string name="chatting_is_dissolution">Dismissing group</string>
    <string name="are_empty_group_of_news">Clearing messages</string>
    <string name="is_modify_the_group_name">Modifying the group name..</string>
    <string name="Modify_the_group_name_successful">Modify the group name successful</string>
    <string name="change_the_group_name_failed_please">Failed to change the group name, please check the network or try again later</string>
    <string name="Are_moving_to_blacklist">Moving to blacklist</string>
    <string name="failed_to_move_into">Failed to move to the blacklist, please check the network or try again later</string>
    <string name="Exit_the_group_chat_failure">Failed to exit the group:</string>
    <string name="Dissolve_group_chat_tofail">Failed to dismiss the group:</string>
    <string name="Add_group_members_fail">Add group members fail:</string>
    <string name="Is_unblock">Unblocking group</string>
    <string name="remove_group_of">Remove group of shielding failure, please check the network or try again later</string>
    <string name="group_is_blocked">Blocking the group..</string>
    <string name="group_of_shielding">Group of shielding failure, please check the network or try again later</string>
    <string name="sure_to_empty_this">Clear all messages?</string>
    <string name="The_delete_button_is_clicked">The delete button is clicked</string>
    <string name="Add_a_button_was_clicked">Add a button was clicked</string>
    <string name="not_delete_myself">Cannot delete myself</string>
    <string name="Are_removed">Removing</string>
    <string name="confirm_the_members">Move this member to group blacklist?</string>
    <string name="Failed_to_get_group_chat_information">Failed to get group information:</string>
    <string name="Is_sending_a_request">Sending the request..</string>
    <string name="Request_to_join">Apply to join</string>
    <string name="send_the_request_is">The request was sent and waiting for owner approval</string>
    <string name="Join_the_group_chat">Join the group</string>
    <string name="Failed_to_join_the_group_chat">Failed to join the group</string>
    <string name="temporary_does_not">Currently the video size greater than 10M is not supported!</string>
    <string name="Video_footage">Video record</string>
    <string name="User_name_cannot_be_empty">User name cannot be empty!</string>
    <string name="Password_cannot_be_empty">Password cannot be empty!</string>
    <string name="please_set_the_current">"Please set the current user's nickname \ n to ios offline push not userid but Nick, see comments"</string>
    <string name="Is_landing">logining..</string>
    <string name="list_is_for">Retrieving the groups and contacts</string>
    <string name="login_failure_failed">Logon failure: failed to retrieve contacts or groups</string>
    <string name="Login_failed">Login failed:</string>
    <string name="receive_the_passthrough">Receive cmd message : action：</string>
    <string name="have_you_removed">Have you removed from his buddy list</string>
    <string name="can_not_connect_chat_server_connection">Cannot connect to server</string>
    <string name="the_current_network">The current network is not available, please check the network Settings</string>
    <string name="Invite_you_to_join_a_group_chat"> Invite you to join this group</string>
    <string name="Agreed_to_your_group_chat_application">Accepted your group application</string>
    <string name="Logoff_notification">Logoff notification</string>
    <string name="Remove_the_notification">Remove the notification</string>
    <string name="Group_name_cannot_be_empty">Group name cannot be empty</string>
    <string name="Is_to_create_a_group_chat">Creating the group</string>
    <string name="Failed_to_create_groups">Failed to create groups</string>
    <string name="The_video_to_start">The video to start</string>
    <string name="Whether_to_send">Are you sure to send?</string>
    <string name="Open_the_equipment_failure">Open the equipment failure!</string>
    <string name="Confirm_password_cannot_be_empty">Confirm password cannot be empty!</string>
    <string name="Two_input_password">Inconsistent password, please enter again!</string>
    <string name="Is_the_registered">Registering..</string>
    <string name="Registered_successfully">Registered successfully</string>
    <string name="network_anomalies">Network is not available, please check the network!</string>
    <string name="User_already_exists">User already existed!</string>
    <string name="registration_failed_without_permission">Registration failed, without permission!</string>
    <string name="Registration_failed">Registration failed:</string>
    <string name="Are_logged_out">Logging out</string>
    <string name="findteacher">找老师</string>
    <string name="tiwenti">提问题</string>
    <string name="kanhuifang">看回放</string>
    <string name="message">消息</string>
    <string name="mycenter">个人中心</string>
</resources>